--- a/src/app/shared/line-items/line-items.component.html
+++ b/src/app/shared/line-items/line-items.component.html
@@ -1,39 +1,47 @@
+<mat-card class="example-card">
+    <mat-card-header>
+      <div mat-card-avatar class="example-header-image"></div>
+      <!-- <mat-card-title>Shiba Inu</mat-card-title>
+      <mat-card-subtitle>Dog Breed</mat-card-subtitle> -->
+    </mat-card-header>
+    <mat-card-content>
+        <div class="table-responsive">
+            <table mat-table class="full-width" matSort multiTemplateDataRows>
+            <ng-container matColumnDef="name">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
+                <td mat-cell *matCellDef="let row">
+                    <div class="bold-font  ">{{row.name}}</div>
+                    <div class="bold-font  ">{{row.description}}</div>
+                </td>
+            </ng-container>
+            <ng-container matColumnDef="quantity">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Quantity</th>
+                <td mat-cell *matCellDef="let row">
+                    <div class="bold-font  ">
+                        {{row.quantity}} <span>{{row.unit}}<span *ngIf="row.quantity>=2">s</span></span>
+                    </div>
+                </td>
+            </ng-container>
+            <ng-container matColumnDef="unit_price">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Unit Price</th>
+                <td mat-cell *matCellDef="let row">
+                    <div class="bold-font  ">{{row.unit_price | currency }}</div>
+                </td>
+            </ng-container>
+            <ng-container matColumnDef="total">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Total</th>
+                <td mat-cell *matCellDef="let row">
+                    <div class="bold-font  ">{{row.quantity*row.unit_price | currency}}</div>
+                </td>
+            </ng-container>
 
-<div class="table-responsive">
-    <table mat-table class="full-width" matSort multiTemplateDataRows>
-      <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
-        <td mat-cell *matCellDef="let row">
-            <div class="bold-font  ">{{row.name}}</div>
-            <div class="bold-font  ">{{row.description}}</div>
-        </td>
-      </ng-container>
-      <ng-container matColumnDef="quantity">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Quantity</th>
-        <td mat-cell *matCellDef="let row">
-            <div class="bold-font  ">
-                {{row.quantity}} <span>{{row.unit}}<span *ngIf="row.quantity>=2">s</span></span>
-            </div>
-        </td>
-      </ng-container>
-      <ng-container matColumnDef="unit_price">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Unit Price</th>
-        <td mat-cell *matCellDef="let row">
-            <div class="bold-font  ">{{row.unit_price | currency }}</div>
-        </td>
-      </ng-container>
-      <ng-container matColumnDef="total">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Total</th>
-        <td mat-cell *matCellDef="let row">
-            <div class="bold-font  ">{{row.quantity*row.unit_price | currency}}</div>
-        </td>
-      </ng-container>
 
-
-      <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true" class="header"></tr>
-      <tr mat-row
-          *matRowDef="let row; columns: displayedColumns;"
-          class="example-element-row example-expanded-row">
-      </tr>
-    </table>
-</div>
+            <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true" class="header"></tr>
+            <tr mat-row
+                *matRowDef="let row; columns: displayedColumns;"
+                class="example-element-row example-expanded-row">
+            </tr>
+            </table>
+        </div>
+    </mat-card-content>
+</mat-card>
