--- a/src/app/shared/tabs/tabs.component.html
+++ b/src/app/shared/tabs/tabs.component.html
@@ -1,4 +1,5 @@
-<div class="container-fluid mt-2">
+
+<div class="container mt-2 col-sm-6">
     <div class="row">
         <!-- Content column -->
         <div class="col-xl-12 col-lg-9 col-md-12 col-sm-12 grid-container">
