--- a/src/app/shared/tabs/tabs.component.html
+++ b/src/app/shared/tabs/tabs.component.html
@@ -1,7 +1,6 @@
 
-<div class="container mt-2 col-sm-6">
+<div class="container-fluid">
     <div class="row">
-        <!-- Content column -->
         <div class="col-xl-12 col-lg-9 col-md-12 col-sm-12 grid-container">
             <nav mat-tab-nav-bar >
                 <a mat-tab-link *ngFor="let tab of tabs"
